--- a/templates/base.html
+++ b/templates/base.html
@@ -167,6 +167,20 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+<!--кнопка показать еще-->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const btn = document.getElementById("show-more-news");
+  if (!btn) return;
+
+  btn.addEventListener("click", () => {
+    document.querySelectorAll(".news-hidden").forEach(el => {
+      el.classList.remove("news-hidden");
+    });
+    btn.remove();
+  });
+});
+</script>
 
 </body>
 </html>
