--- a/static/css/style.css
+++ b/static/css/style.css
@@ -164,7 +164,7 @@ header .accessibility-nav .vision-toggle {
   align-items: center;
   gap: 12px;
   font-weight: 700;
-  color: #fff; /
+  color: #fff;
 }
 
 /* переключатель (только под header .accessibility-nav) */
@@ -218,13 +218,6 @@ header .accessibility-nav .switch input:checked + .slider::before {
 }
 
 /* hero */
-.hero {
-  padding:60px 0;
-  background:linear-gradient(90deg,var(--brand-2) 0%, var(--brand));
-  color:white;
-  margin-top: 0;
-}
-
 .hero h1{
   margin:0;
   font-size:36px;
@@ -1274,6 +1267,13 @@ p{margin:0 0 12px}
 }
 
 /* Поле ввода ответа */
+.message-form {
+  display: flex;
+  align-items: flex-start;
+  gap: 12px;
+  margin-top: 12px;
+}
+
 .message-form textarea {
   width: 50%;
   min-height: 50px;
@@ -1299,6 +1299,11 @@ p{margin:0 0 12px}
   justify-content: flex-end;
   gap: 12px;
   margin-top: 12px;
+}
+
+.message-form button {
+  margin-top: 10px;
+  white-space: nowrap;
 }
 
 /* общие кнопки */
