Панель управления настройками для версии слабовидящих

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -211,6 +211,10 @@ header .accessibility-nav .switch input:checked + .slider::before {
   transform: translateX(26px);
 }
 
+.vision-panel {
+  display: none;
+}
+
 /* если по какой-то причине switch окажется в слайде — скрываем */
 .slider-wrapper .switch,
 .slide .switch {
